# MaaGameDataServer

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  pom.xml
.github/workflows/: build-release.yml
dev-deploy/: deployment.yaml  ingress.yaml  service.yaml
prod-deploy/: deployment.yaml  ingress.yaml  service.yaml
src/: main.cc
src/controller/rest/gamedata/: ActivityController.cc  ActivityController.h  ActivityControllerBase.cc  ActivityControllerBase.h  CharacterController.cc  CharacterController.h  CharacterControllerBase.cc  CharacterControllerBase.h  CharactersController.cc  CharactersController.h  CharactersControllerBase.cc  CharactersControllerBase.h  ItemController.cc  ItemController.h  ItemControllerBase.cc  ItemControllerBase.h  SkillController.cc  SkillController.h  SkillControllerBase.cc  SkillControllerBase.h  StageController.cc  StageController.h  StageControllerBase.cc  StageControllerBase.h  ZoneController.cc  ZoneController.h  ZoneControllerBase.cc  ZoneControllerBase.h
src/main/java/org/maa/server/gamedata/: MaaGameDataServerApplication.java
src/main/resources/: application-dev.yaml  application-prod.yaml  application.yaml
src/main/resources/db/changelog/: liquibase.xml
src/model/gamedata/: Activity.cc  Activity.h  Character.cc  Character.h  Characters.cc  Characters.h  Item.cc  Item.h  Skill.cc  Skill.h  Stage.cc  Stage.h  Zone.cc  Zone.h  model.json
src/plugin/: DataSync.cc  DataSync.h
src/test/java/org/maa/server/gamedata/: MaaGameDataServerApplicationTests.java  (+1 more)
src/util/: converter.h  croncpp.h  json.h
(+32 files in other folders)
